# searchmcp

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  searchmcp.example.toml
src/searchmcp/: __main__.py  base.py  bing.py  brave.py  config.py  duckduckgo.py  registry.py  searxng.py  server.py  tavily.py
