[project]
name = "searchmcp"
version = "0.1.0"
description = "MCP server for online search with multiple backend support"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "ddgs>=8.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
searchmcp = "searchmcp.server:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
